# transcript-server

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
